# diy-360-camera

./: .gitignore  cam0_fisheye_params.txt  cam1_fisheye_params.txt  clean_image.py  default.nix  devenv.nix  find_fishey_center.py  find_parameters.py  find_parameters_brute_force.py  find_parameters_manual.py  find_parameters_manual_gui.py  fisheye_params.txt  main.py  merge_images.py  multi_process.py  overlap.py  pyproject.toml  smooth_video.sh  stitch_line.py  test_blend.py
camera360/: calibration.py  calibration_robust.py  fisheye_to_equirect_converter.py  horizontal_fade.py  image_processor.py  mean_square_error.py  parameters_processor.py  remove_outer_noise.py  rotate_image.py
camera360/multi_processing/: processor.py
diy_camera_360/: analyse_parameters_result.py  blend_image_with_mask.py  create_lrv_live.py  fisheye_to_equirect_converter.py  horizontal_fade.py  image_processor.py  parameters_processor.py  remove_outer_noise.py  swap_image_halves.py
diy_camera_360/multi_processing/: processor_factory.py  task.py  task_queue.py
